--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,18 +1,18 @@
 .Home {
-    display: flex;
+    /*display: flex;*/
     /*flex-direction: column;*/
     /*display: block;*/
-    max-width: 1700px;
+    /*max-width: 1700px;*/
 }
 
 .homeContainer{
-    display: flex;
-    flex-direction: column;
+    /*display: flex;*/
+    /*flex-direction: column;*/
 }
 
 .headerContainer {
-    min-width: 200px;
-    display: flex;
+    /*min-width: 200px;*/
+    /*display: flex;*/
     /*flex-direction: column;*/
     /*display: inline-block;*/
 }
