--- a/src/components/Home/About/About.css
+++ b/src/components/Home/About/About.css
@@ -1,60 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Cabin|Dancing+Script|Gilda+Display|Satisfy|Staatliches&display=swap');
-
-.About{
-    background-color: var(--color_dark_black);
-    display: flex;
-}
-
-.aboutContainer{
-    padding: 5%;
-    display: flex;
-    flex-direction: column;
-}
-
-.aboutTitle{
-    font-size: 500%;
-    font-family: 'Cabin', sans-serif;
-    font-weight: bold;
-    margin-bottom: -1%;
-    color: var(--color_dark_gray);
-
-}
-
-.aboutDesc{
-    /*margin-bottom: -1%;*/
-    font-size: 300%;
-    font-family: 'Staatliches', cursive;
-    color: var(--color_pink);
-}
-
-.aboutBlurb{
-    font-size: 150%;
-    font-family: 'Satisfy', cursive;
-    color: var(--color_gray);
-}
-
-.aboutMoreInfo{
-    font-size: 105%;
-    font-family: 'Cabin', sans-serif;
-    color: var(--color_gray);
-}
-
-.aboutImageContainer{
-    max-width: 500px;
-    display: flex;
-    flex-direction: column;
-}
-
-.projBtn{
-    color: var(--color_white);
-    margin-top: 10px;
-    font-family: 'Staatliches', cursive;
-    font-size: 150%;
-    border: none;
-    background-color: var(--color_purple);
-    padding: 15px;
-}
-
-.projBtn:hover{
-    background-color: var(--color_pink);
+.aboutImage{
+    min-height: 100%;
 }
