--- a/src/components/Home/Experience/Experience.css
+++ b/src/components/Home/Experience/Experience.css
@@ -3,41 +3,8 @@
     display: flex;
 }
 
-.expContainer{
-    padding: 5%;
-    display: flex;
-    flex-direction: column;
-}
-
-.expTitle{
-    font-size: 500%;
-    font-family: 'Cabin', sans-serif;
-    font-weight: bold;
-    margin-bottom: -1%;
-    color: var(--color_dark_gray);
-}
-
-.expDesc{
-    font-size: 300%;
-    font-family: 'Staatliches', cursive;
-    color: var(--color_pink);
-}
-
-.expBlurb{
-    font-size: 150%;
-    font-family: 'Satisfy', cursive;
-    color: var(--color_gray);
-    margin-bottom: 70px;
-}
-
-.expMoreInfo{
-    font-size: 105%;
-    font-family: 'Cabin', sans-serif;
-    color: var(--color_gray);
-}
-
 .expListItemContainer{
-    padding-bottom: 50px;
+    padding-top: 50px;
 }
 
 .expListItem{
@@ -52,19 +19,5 @@
     max-width: 500px;
     display: flex;
     flex-direction: column;
-    max-height: 1600px;
-}
-
-.expBtn{
-    color: var(--color_white);
-    margin-top: 10px;
-    font-family: 'Staatliches', cursive;
-    font-size: 150%;
-    border: none;
-    background-color: var(--color_purple);
-    padding: 15px;
-}
-
-.expBtn:hover{
-    background-color: var(--color_pink);
+    max-height: 1470px;
 }
